Limited ParameterUtil#cast(DataType, Object) to casts in the direction of less restriction